feature: improved Terraform deployment